Add/ Register Discount Service, add DiscountService project reference to CheckoutService

--- a/CheckoutService/CheckoutService.csproj
+++ b/CheckoutService/CheckoutService.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CatalogueService\CatalogueService.csproj" />
+    <ProjectReference Include="..\DiscountService\DiscountService.csproj" />
   </ItemGroup>
 
 </Project>
