--- a/ECommerceApp.Tests/ECommerceApp.Tests.csproj
+++ b/ECommerceApp.Tests/ECommerceApp.Tests.csproj
@@ -10,12 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Moq" Version="4.20.69" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CheckoutService\CheckoutService.csproj" />
+    <ProjectReference Include="..\CatalogueService\CatalogueService.csproj" />
+    <ProjectReference Include="..\DiscountService\DiscountService.csproj" />
   </ItemGroup>
 
 </Project>
